Added a proposal for testimonials

--- a/index.html
+++ b/index.html
@@ -73,23 +73,58 @@
 	<!-- FEATURETTES -->
 	<hr class="featurette-divider">
 	<div class="featurette" id="about">
-	<h1>About Us</h1>
+	<h1 class=featurette-heading">About Us</h1>
 	
 	</div>
 	<hr class="featurette-divider">	
-	<div class="featurette" id="testimonials">
-	<h1>People We've Worked With</h1>
-	</div>
+	<div class="featurette" id="testimonials" style="padding-top:120px">
+
+      <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active">
+          <div class="container" style="width:85%">
+               <img class="featurette-image pull-right" src="img/logo_fish.jpg" />
+	            <h2 class=featurette-heading">
+                  People We Have Worked With <br/>
+                  <span class="muted">FISH Digital Forensics Ltd.</span>
+               </h2>
+               <p class="lead">
+                  Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+               </p>
+          </div>
+        </div>
+        <div class="item">
+         <div class="container" style="width:85%">
+               <img class="featurette-image pull-right" src="img/logo_imperial.jpg" />
+	            <h2 class=featurette-heading">
+                  People We Have Worked With <br/>
+                  <span class="muted">Imperial College London</span>
+               </h2>
+               <p class="lead">
+                  Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+               </p>
+          </div>
+        </div>
+       
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">‹</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">›</a>
+    </div>
+
+
+      
+   </div>
+
 	<hr class="featurette-divider">	
 	<div class="featurette" id="contact">
-	<h1>Get in touch</h1>
+	<h1 class=featurette-heading">Get in touch</h1>
 	<div class="row">
 	<div class="span4">
 	<h3>General Enquiries</h3>
 	<table>
 	<tr>
 	<td>Email</td>
-	<td>ozzyoli@gmail.com</td>
+	<td>hello@ovida.com</td>
 	</tr>
 	<tr>
 	</table>
@@ -107,6 +142,9 @@
 			<td>07854601573</td>
 		</tr>
 		<tr>
+			<td>Twitter</td>
+		</tr>
+		<!--<tr>
 			<td></td>
 			<td><script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 			<div id="genSkypeCall_01">
@@ -120,7 +158,7 @@
 			        });
 			    </script>
 			</div></td>
-		</tr>
+		</tr> -->
 	</table>
 	</div>
 	<div class="span4">
