Removed automatic sliding in testimonials

--- a/index.html
+++ b/index.html
@@ -183,5 +183,13 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/holder.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function() {
+         $('.carousel').carousel({
+            interval: false
+         })
+      });
+    </script>
 </body>
 </html>
