--- a/index.html
+++ b/index.html
@@ -77,27 +77,26 @@
 	
 	</div>
 	<hr class="featurette-divider">	
-	<div class="featurette" id="testimonials" style="padding-top:120px">
-
+	<div class="featurette" id="testimonials">
+      <h1 class="featurette-heading">People We Have Worked With</h1>
       <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <div class="container" style="width:85%">
+          <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
                <img class="featurette-image pull-right" src="img/logo_fish.jpg" />
 	            <h2 class=featurette-heading">
-                  People We Have Worked With <br/>
                   <span class="muted">FISH Digital Forensics Ltd.</span>
                </h2>
-               <p class="lead">
-                  Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
-               </p>
+               <blockquote>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  <small>Charles James, Director at FISH Digital Forensics</small>
+</blockquote>
           </div>
         </div>
         <div class="item">
-         <div class="container" style="width:85%">
+         <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
                <img class="featurette-image pull-right" src="img/logo_imperial.jpg" />
 	            <h2 class=featurette-heading">
-                  People We Have Worked With <br/>
                   <span class="muted">Imperial College London</span>
                </h2>
                <p class="lead">
