Added Contact Info

--- a/index.html
+++ b/index.html
@@ -133,36 +133,52 @@
 	<img class="img-circle" data-src="js/holder.js/140x140"/>
 	<table>
 		<tr>
-			<td>Email</td>
+			<td><i class="icon-envelope"></i></td>
 			<td>oli@ovida.com</td>
 		</tr>
 		<tr>
-			<td>Tel</td>
+			<td><i class="icon-signal"/></td>
 			<td>07854601573</td>
 		</tr>
 		<tr>
-			<td>Twitter</td>
+			<td><i class="icon-facetime-video"/></td>
+			<td>ozzyoli</td>
 		</tr>
-		<!--<tr>
+		<tr>
+			<td><i class="icon-briefcase"></i></td>
+			<td><a href="http://uk.linkedin.com/pub/oliver-wilkie/40/679/42/">Oliver Wilkie</a></td>
+		</tr>
+		<tr>
 			<td></td>
-			<td><script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
-			<div id="genSkypeCall_01">
-			    <script type="text/javascript">
-			        Skype.ui({
-			            name: "call",
-			            element: "genSkypeCall_01",
-			            participants: ["ozzyoli"],
-			            imageSize: 32,
-			            imageColor: "skype"
-			        });
-			    </script>
-			</div></td>
-		</tr> -->
+			<td><a href="https://twitter.com/oliwilks">@oliwilks</a></td>
+		</tr>
 	</table>
 	</div>
 	<div class="span4">
 	<h3>Contact David</h3>
 	<img class="img-circle" data-src="js/holder.js/140x140"/>
+		<table>
+		<tr>
+			<td><i class="icon-envelope"></i></td>
+			<td>david@ovida.com</td>
+		</tr>
+		<tr>
+			<td><i class="icon-signal"/></td>
+			<td>07506864985</td>
+		</tr>
+		<tr>
+			<td><i class="icon-facetime-video"/></td>
+			<td>david.haber90</td>
+		</tr>
+		<tr>
+			<td><i class="icon-briefcase"></i></td>
+			<td><a href="http://uk.linkedin.com/in/haberdavid/en">David Haber</a></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td><a href="https://twitter.com/oliwilks">@davhab</a></td>
+		</tr>
+	</table>
 	</div>
 	</div>
 	</div>
