Moved Nav bar down a bit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="navbar navbar-inverse">
 	<div class="navbar-inner">
 	<!-- TODO Responsive Navbar Part 1 -->
-	<a class="brand">Ovida Inc.</a>
+	<a class="brand">Ovida</a>
 	<div class="nav-collapse collapse">
 		<ul class="nav">
 			<li><a href="#about">About Us</a></li>
