Added Oli;s face

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	</div>
 	<div class="span4">
 	<h3>Contact Oli</h3>
-	<img class="img-circle" data-src="js/holder.js/140x140"/>
+	<img class="img-circle" src="img/oli.jpg"/>
 	<table>
 		<tr>
 			<td><i class="icon-envelope"></i></td>
