--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<div class="navbar navbar-inverse">
 	<div class="navbar-inner">
 	<!-- TODO Responsive Navbar Part 1 -->
-	<a class="brand">Ovida</a>
-	<div class="nav-collapse collapse">
+	<a class="brand" href="">Ovida <small>Bespoke Developers</small></a>
+	<div class="nav-collapse collapse pull-right">
 		<ul class="nav">
 			<li><a href="#about">About Us</a></li>
 			<li><a href="#testimonials">Testimonials</a></li>
@@ -50,37 +50,38 @@
 	<div id="quickInfo" class="row">
 		<div class="span4">
 			<img class="img-circle" data-src="js/holder.js/140x140"/>
-			<h2>What We Do</h2>
-			<p>We are a pair of programmers looking for work.</p>
+			<h2>Who We Are</h2>
+			<p>We are two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>vast range of industries</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
 		</div>
 		<div class="span4">
 			<img class="img-circle" data-src="js/holder.js/140x140"/>
-			<h2>What we offer</h2>
-			<p>Unrivalled work.</p>
+			<h2>What We Offer</h2>
+			<p>We can help you <strong>realise</strong> your software, app and web-based needs and can cover the <strong>full range of development stages</strong> from initial feasibility studies, design and prototyping, to fully-fledged customer-facing end products and post-launch maintenance.</p>
 		</div>
 		<div class="span4">
 	      <img class="img-circle" data-src="js/holder.js/140x140"/>
-			<h2>What you get</h2>
-			<p>Unrivalled work.</p>
+			<h2>Available for Hire</h2>
+			<p>We are currently accepting projects so please <a href="#contact">get in touch</a> or hear more about <a href="#about">our story</a>, or read the <a href="#testimonials">nice things</a> people have said about us. </p>
 		</div>
 	</div>
 	
 	
 	<!-- FEATURETTES -->
-	<hr class="featurette-divider">
 	<div class="featurette" id="about">
-	<h1 class=featurette-heading">About Us</h1>
-	
+	<div class="page-header">
+	<h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
+	</div>	
 	</div>
-	<hr class="featurette-divider">	
 	<div class="featurette" id="testimonials">
-      <h1 class="featurette-heading">People We Have Worked With</h1>
+	<div class="page-header">
+	<h1 class="featurette-heading">Testimonials <small>Hear what our clients, colleagues and associates have to say.</small></h1>
+	</div>
       <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
           <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
                <img class="featurette-image pull-right" src="img/logo_fish.jpg" />
-	            <h2 class=featurette-heading">
+	            <h2 class="featurette-heading">
                   <span class="muted">FISH Digital Forensics Ltd.</span>
                </h2>
                <blockquote>
@@ -123,9 +124,10 @@
       
    </div>
 
-	<hr class="featurette-divider">	
 	<div class="featurette" id="contact">
-	<h1 class=featurette-heading">Get in touch</h1>
+	<div class="page-header">
+	<h1 class="featurette-heading">Get in touch <small>We look forward to hearing from you.</small></h1>
+	</div>
 	<div class="row">
 	<div class="span4">
 	<h3>Contact Oli</h3>
@@ -187,11 +189,14 @@
 					<br/>
 					<button type="submit" class="btn">Send</button>
 			</form>
+			<div class="alert alert-success">
+					<b>Thanks!</b> We will be in touch very soon!
+			</div>
 	</div>
 	</div>
 	
 	<footer>
-		<p class="pull-right"><a href="#">Back to top</a></p>
+		<p class="pull-right"><a href="">Back to top</a></p>
 	</footer>
 	
 	</div><!-- END INFORMATION -->
@@ -205,13 +210,24 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/holder.js"></script>
-
     <script type="text/javascript">
       $(document).ready(function() {
          $('.carousel').carousel({
-            interval: false
+            interval: 5000
          })
       });
     </script>
+    <script type="text/javascript">
+    $('a[href^="#"]').bind('click.smoothscroll',function (e) {
+	    e.preventDefault();
+	    var target = this.hash;
+	        $target = $(target);
+	    $('html, body').stop().animate({
+	        'scrollTop': $target.offset().top
+	    }, 500, 'swing', function () {
+	        window.location.hash = target;
+	    });
+    });
+</script>
 </body>
 </html>
