Added images to quick info page

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 			<p>We are two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>vast range of industries</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
 		</div>
 		<div class="span4">
-			<img class="img-circle" data-src="js/holder.js/140x140"/>
+			<img class="img-circle" src="img/code.jpg"/>
 			<h2>What We Offer</h2>
 			<p>We can help you <strong>realise</strong> your software, app and web-based needs and can cover the <strong>full range of development stages</strong> from initial feasibility studies, design and prototyping, to fully-fledged customer-facing end products and post-launch maintenance.</p>
 		</div>
 		<div class="span4">
-	      <img class="img-circle" data-src="js/holder.js/140x140"/>
+	      <img class="img-circle" src="img/open.jpg"/>
 			<h2>Available for Hire</h2>
 			<p>We are currently accepting projects so please <a href="#contact">get in touch</a> or hear more about <a href="#about">our story</a>, or read the <a href="#testimonials">nice things</a> people have said about us. </p>
 		</div>
