--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<!-- BELOW IMAGE INFORMATION -->
 	<div id="quickInfo" class="row">
 		<div class="span4">
-			<img class="img-circle" data-src="js/holder.js/140x140"/>
+			<img class="img-circle" src="img/desks.jpg"/>
 			<h2>Who We Are</h2>
 			<p>We are two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>vast range of industries</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
 		</div>
