modified contact part, removed skype and changed link to linkedin

--- a/index.html
+++ b/index.html
@@ -139,15 +139,11 @@
 		</tr>
 		<tr>
 			<td><i class="icon-signal"/></td>
-			<td>07854601573</td>
-		</tr>
-		<tr>
-			<td><i class="icon-facetime-video"/></td>
-			<td>ozzyoli</td>
+			<td>+44 785 460 1573</td>
 		</tr>
 		<tr>
 			<td><i class="icon-briefcase"></i></td>
-			<td><a href="http://uk.linkedin.com/pub/oliver-wilkie/40/679/42/">Oliver Wilkie</a></td>
+			<td><a href="http://uk.linkedin.com/pub/oliver-wilkie/40/679/42/">LinkedIn</a></td>
 		</tr>
 		<tr>
 			<td></td>
@@ -165,15 +161,12 @@
 		</tr>
 		<tr>
 			<td><i class="icon-signal"/></td>
-			<td>07506864985</td>
+			<td>+44 750 686 4985</td>
 		</tr>
-		<tr>
-			<td><i class="icon-facetime-video"/></td>
-			<td>david.haber90</td>
-		</tr>
+
 		<tr>
 			<td><i class="icon-briefcase"></i></td>
-			<td><a href="http://uk.linkedin.com/in/haberdavid/en">David Haber</a></td>
+			<td><a href="http://uk.linkedin.com/in/haberdavid/en">LinkedIn</a></td>
 		</tr>
 		<tr>
 			<td></td>
