Added more testimonials

--- a/index.html
+++ b/index.html
@@ -93,24 +93,45 @@
         <div class="item">
          <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
                <img class="featurette-image pull-right" src="img/logo_imperial.jpg" />
-	            <h2 class=featurette-heading">
-                  <span class="muted">Imperial College London</span>
-               </h2>
                <blockquote>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <small>Charles James, Director at FISH Digital Forensics</small>
+                  <small>Dr Francesca Toni, Department of Computing, Imperial College London</small>
                </blockquote>
           </div>
         </div>
         <div class="item">
          <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
-               <img class="featurette-image pull-right" src="img/logo_rich.png" />
-	            <h2 class=featurette-heading">
-                  <span class="muted">Rich Clayton</span>
-               </h2>
+               <img class="featurette-image pull-right" src="img/logo_rich.png"/>
+               <blockquote>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <small>Cristina Grigoruta, Ex-Facebook, Ex-Google Employee</small>
+               </blockquote>
+          </div>
+        </div>
+        <div class="item">
+         <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
+               <img class="featurette-image pull-right" src="img/logo_rich.png"/>
                <blockquote>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                   <small>Rich Clayton, Creative Director at iGeolise</small>
+               </blockquote>
+          </div>
+        </div>
+        <div class="item">
+         <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
+               <img class="featurette-image pull-right" src="img/logo_rich.png"/>
+               <blockquote>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <small>Edwin Ridwan, Independent Investment Advisor</small>
+               </blockquote>
+          </div>
+        </div>
+        <div class="item">
+         <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
+               <img class="featurette-image pull-right" src="img/logo_rich.png"/>
+               <blockquote>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <small>Jon Barber, AKQA</small>
                </blockquote>
           </div>
         </div>
