--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
 	<div class="featurette" id="about">
 	<div class="page-header">
 	<h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
+	<p>
+		Our paths first crossed in 2009 as Computer Science undergraduates at <a href="http://www3.imperial.ac.uk/aboutimperial/league_rankings" target="_blank">Imperial College London</a>, we quickly found out we shared the same work ethic and enthusiasm for learning new programming languages and using them to build useful products! Throughout our studies we worked together on a wide range of projects including a compiler, an operating system and a human sentiment analyser (for which our team won a department <a href="http://www3.imperial.ac.uk/computing/teaching/prizes/2012/ug" target="_blank">prize</a> for best group project).</p> <p>As our studies continued, our collaborative efforts became more and more successful, so much so that we felt it was simply too good to abandon upon graduating. In 2011 we officially began working under the name of Ovida; building software from our base in London. We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we built a prototype application helping care for Alzheimer patients. We have recently been selected for the <a href="http://www.entrepreneurfirst.org.uk/"> Entrepreneur First</a> which we will enter in late 2013.
+		</p>
+	</p>
+	<p>
+	<strong>Oli</strong> has always had keen interest for computers and what they could be used for. Over the recent years, Oli has worked as a Creative Technologist, building campaign tools for a creative ad agency, built and tailored software for Nike, developed a touch-screen airport kiosk in France and also worked as Technical Manager for ICRadio.com for two years improving the quality of the radio station for both listeners and broadcasters.
+	</p>
+	<p>
+	<strong>David</strong>
+	</p>
+	<h3>Our skillset</h3>
+	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">DJango</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span> and growing...
 	</div>	
 	</div>
 	<div class="featurette" id="testimonials">
