Added Jon Barber recommendation

--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
         </div>
         <div class="item">
          <div class="container" style="width:85%;height: 400px;padding-top: 10%;">
-               <img class="featurette-image pull-right" src="img/logo_rich.png"/>
+               <img class="featurette-image pull-right" src="img/akqa.jpg"/>
                <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <small>Jon Barber, AKQA</small>
+                  <p>Oli is a pleasure to work with. He grasped complex advanced topics quickly and would research areas by himself and come up with good solutions. He is also a thoroughly pleasant team member who everyone enjoyed working alongside. I couldn't recommend Oli strongly enough.</p> <small>Jon Barber, Technical Architect, AKQA</small>
                </blockquote>
           </div>
         </div>
