--- a/index.html
+++ b/index.html
@@ -69,18 +69,20 @@
 	
 	<!-- FEATURETTES -->
 	<div class="featurette" id="about">
-	<div class="page-header">
-	<h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
-	<p>
-		Our paths first crossed in 2009 as Computer Science undergraduates at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a>, we quickly found out we shared the same work ethic and enthusiasm for new technologies and using them to build useful products! Throughout our studies we worked together on a range of projects.
+	   <div class="page-header">
+	   <h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
+	   <p>
+		   Our paths first crossed in 2009 as Computer Science undergraduates at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a>, we quickly found out we shared the same work ethic and enthusiasm for new technologies and using them to build useful products! Throughout our studies we worked together on a range of projects.
 
-<p>As our studies continued, our collaborative efforts became more and more successful, so much so that we felt it was simply too good to abandon upon graduating. In 2011 we officially began working under the name of <strong>Ovida</strong>; building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have recently been granted office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we will be moving into in late 2013.</p>
-	<p>
-We have developed software for a variety of companies in sectors including advertisement, aviation, finance and urban development.
-	<h3>We work with technologies including</h3>
-	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span> and growing...
+         <p>As our studies continued, our collaborative efforts became more and more successful, so much so that we felt it was simply too good to abandon upon graduating. In 2011 we officially began working under the name of <strong>Ovida</strong>; building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have recently been granted office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we will be moving into in late 2013.</p>
+	   <p>We have developed software for a variety of companies in sectors including advertisement, aviation, finance and urban development.
+	   <h3>We work with technologies including</h3>
+	   <span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> 
+      <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span>  
+      <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> 
+      <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span> and growing...
 	</div>	
-	</div>
+
 	<div class="featurette" id="testimonials">
 	<div class="page-header">
 	<h1 class="featurette-heading">Testimonials <small>Hear what our clients, colleagues and associates have to say.</small></h1>
