Changed CSS for main image

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 	
 	<!-- BIG IMAGE -->
 	<div id="bigImage">
-		<div class="item">
- 		<img src="img/google.jpg"/>
+		<div class="item center-cropped" style="background-image: url('img/google.jpg');"/>
 		</div>
 	</div>
 	
