--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 	<div class="container">
 	<div class="navbar navbar-inverse">
 	<div class="navbar-inner">
-	<!-- TODO Responsive Navbar Part 1 -->
+    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
 	<a class="brand" href="">Ovida <small>Bespoke Developers</small></a>
 	<div class="nav-collapse collapse pull-right">
 		<ul class="nav">
