--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <p>As our studies continued, our collaborative efforts became more and more successful, so much so that we felt it was simply too good to abandon upon graduating. In 2011 we officially began working under the name of <strong>Ovida</strong>; building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have recently been granted office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we will be moving into in late 2013.</p>
 	<p>
 We have developed software for a variety of companies in sectors including advertising, aviation, finance and urban development.
-	<h3>We work with technologies including</h3>
-	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span> and growing...
+	<h2><small>Technologies we work with include</small></h2>
+	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span>
 	</div>	
 	</div>
 	<div class="featurette" id="testimonials">
@@ -207,7 +207,7 @@ We have developed software for a variety of companies in sectors including adver
 	</table>
 	</div>
 	<div class="span4">
-	   <h3>Send A Message</h3>
+	   <h3>Drop Us A Line</h3>
 			<form>
 					<input type="email" placeholder="Email.." style="width:75%"/>
 					<textarea rows="3" placeholder="Message" style="width:75%"  ></textarea>
