Improvements for larger screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 </head>
 <body>
-
+	<div id="firstPage">
 	<!-- NAVBAR -->
 	<div class="navbar-wrapper">
 	<!-- Put navbar in a container. The container is centered in its parent. -->
@@ -48,8 +48,6 @@
 	
 	<!-- INFORMATION -->
 	<div class="container">
-	
-	
 	<!-- BELOW IMAGE INFORMATION -->
 	<div id="quickInfo" class="row">
 		<div class="span4">
@@ -68,8 +66,9 @@
 			<p>We are currently accepting projects so please <a href="#contact">get in touch</a> or hear more about <a href="#about">our story</a>, or read the <a href="#testimonials">nice things</a> people have said about us. </p>
 		</div>
 	</div>
-	
-	
+	</div>
+	<div>
+	<div class="container">
 	<!-- FEATURETTES -->
 	<div class="featurette" id="about">
 	<div class="page-header">
