Removed testimonials that we havent received

--- a/index.html
+++ b/index.html
@@ -88,22 +88,6 @@
       <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active container">
-			<div class="row">
-			    <div class="span6">
-			    <div class="quote">
-			        <blockquote>
-			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-			            posuere erat a ante.</p><small>Charles James, Director at FISH
-			            Digital Forensics</small>
-			        </blockquote>
-			    </div>
-			    </div>
-			
-			    <div class="span6 featurette-image"><img src=
-			    "img/logo_fish.jpg"></div>
-          </div>
-        </div>
-        <div class="item container">
          	  <div class="row">
          	  <div class="span6">
          	  <div class="quote">
@@ -139,27 +123,12 @@
          	  <div class="quote">
 	          <blockquote>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <<small>Rich Clayton, Creative Director at iGeolise</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image">
-	         	    <img src="img/logo_rich.png"/>
-         	  </div>
-         	  </div>
-        </div>
-        <div class="item container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                   <<small>Edwin Ridwan, Independent Investment Advisor</small>
                </blockquote>
          	  </div>
          	  </div>
          	  <div class="span6 featurette-image">
-	         	    <img src="img/logo_rich.png"/>
+	         	    <img src="img/logo_imperial.jpg"/>
          	  </div>
          	  </div>
         </div>                
