corrected e-mail addresses to .co.uk

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	<table>
 		<tr>
 			<td><i class="icon-envelope"></i></td>
-			<td>oli@ovida.com</td>
+			<td>oli@ovida.co.uk</td>
 		</tr>
 		<tr>
 			<td><i class="icon-signal"/></td>
@@ -187,7 +187,7 @@
 		<table>
 		<tr>
 			<td><i class="icon-envelope"></i></td>
-			<td>david@ovida.com</td>
+			<td>david@ovida.co.uk</td>
 		</tr>
 		<tr>
 			<td><i class="icon-signal"/></td>
