Big images are hidden on phones

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 	
 	   <!-- BIG IMAGE -->
-	   <div id="bigImage">
+	   <div id="bigImage" class="hidden-phone">
 		   <div class="item center-cropped" style="background-image: url('img/header_n.jpg');"></div>
 	   </div>
 	
@@ -97,7 +97,7 @@
                </blockquote>
          	  </div>
          	  </div>
-         	  <div class="span6 featurette-image">
+         	  <div class="span6 featurette-image hidden-phone">
 	         	    <img src="img/logo_imperial.jpg" />
          	  </div>
          	  </div>
@@ -112,7 +112,7 @@
                </blockquote>
          	  </div>
          	  </div>
-         	  <div class="span6 featurette-image">
+         	  <div class="span6 featurette-image hidden-phone">
 	         	    <img src="img/logo_imperial.jpg" />
          	  </div>
          	  </div>
@@ -127,7 +127,7 @@
                </blockquote>
          	  </div>
          	  </div>
-         	  <div class="span6 featurette-image">
+         	  <div class="span6 featurette-image hidden-phone">
 	         	    <img src="img/logo_imperial.jpg"/>
          	  </div>
          	  </div>
@@ -142,7 +142,7 @@
                </blockquote>
          	  </div>
          	  </div>
-         	  <div class="span6 featurette-image">
+         	  <div class="span6 featurette-image hidden-phone">
 	         	    <img src="img/akqa.jpg"/>
          	  </div>
          	  </div>
