--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </div>
 	
 	   <!-- BIG IMAGE -->
-	   <div id="bigImage" class="hidden-phone">
-		   <div class="item center-cropped" style="background-image: url('img/header_n.jpg');"></div>
+	   <div id="bigImage">
+		   <div class="item center-cropped hidden-phone" style="background-image: url('img/header_n.jpg');"></div>
 	   </div>
 	
 	   <!-- CIRCLES -->
