Reworded About Us to be less studenty based on initial feedback

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		      <div class="span4">
 			      <img class="img-circle" src="img/desks.jpg"/>
 			      <h2>Who We Are</h2>
-			      <p>We are two budding freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>variety of industry sectors</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
+			      <p>Ovida is the partnership of two freelance developers trained in a diverse range of Computer Science fields with <strong>experience</strong> developing software in a <strong>variety of industry sectors</strong> including the Aviation, Advertising, Banking and Forensic industries; as well as <strong>R&amp;D</strong> work in machine learning and computer vision.</p>
 		      </div>
 		      <div class="span4">
 			      <img class="img-circle" src="img/code.jpg"/>
@@ -74,9 +74,8 @@
 	      <div class="page-header">
 	         <h1 class="featurette-heading">About Us <small>Who we are and what we do.</small></h1>
 	      </div>
-	      <p>Our paths first crossed in 2009 as Computer Science undergraduates at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a>, we quickly found out we shared the same work ethic and enthusiasm for new technologies and using them to build useful products! Throughout our studies we worked together on a range of projects.
-
-         <p>As our studies continued, our collaborative efforts became more and more successful, so much so that we felt it was simply too good to abandon upon graduating. In 2011 we officially began working under the name of <strong>Ovida</strong>; building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have recently been granted office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we will be moving into in late 2013.</p>
+	      <p>Ovida's roots start in 2009 when two Computer Science students at <a href="http://www.imperial.ac.uk" target="_blank">Imperial College London</a> discovered they shared a strong work ethic and enthusiasm for harnessing new technologies to build useful products. 
+         <p>As the years passed, the partnership became more and more successful, so much so that it was felt simply too good to abandon. In 2011 we officially began working under the name of <strong>Ovida</strong>, building software from our base in London; some of which <a href="http://www.thisislincolnshire.co.uk/Lincolnshire-Police-hi-tech-match-fingerprints/story-12969111-detail/story.html" target="_blank">made the local press</a>! We are also attendees of the <a href="www.rhok.org" target="_blank">Random Hack of Kindness</a> hackathons where we have built a prototype application helping care for Alzheimer patients. We have secured office space at the <strong>Google Campus</strong> in Silicon Roundabout London which we are due to move into later this year.</p>
 	      <p>We have developed software for a variety of companies in sectors including advertising, aviation, finance and urban development.
 	      <h2><small>Technologies we work with include</small></h2>
 	<span class="label label-info">Java</span> <span class="label label-info">Python</span> <span class="label label-info">C++</span> <span class="label label-info">MySQL</span> <span class="label label-info">PHP</span> <span class="label label-info">HTML5+JS+CSS</span> <span class="label label-info">Android</span> <span class="label label-info">Blackberry</span> <span class="label label-info">Django</span> <span class="label label-info">Spring (Java EE)</span> <span class="label label-info">Ruby On Rails</span>
