--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   </button>
-	               <a class="brand" href="">Ovida <small>Bespoke Developers</small></a>
+	               <a class="brand" href="">Ovida <small>Bespoke Development</small></a>
 	               <div class="nav-collapse collapse pull-right">
 		               <ul class="nav">
 			               <li><a href="#about">About Us</a></li>
