Removed blank testimonials

--- a/index.html
+++ b/index.html
@@ -86,36 +86,6 @@
 	</div>
       <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
-        <div class="item active container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <small>Dr Francesca Toni, Department of Computing, Imperial College London</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/logo_imperial.jpg" />
-         	  </div>
-         	  </div>
-        </div>
-        <div class="item container">
-         	  <div class="row">
-         	  <div class="span6">
-         	  <div class="quote">
-	          <blockquote>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                  <small>Cristina Grigoruta, Ex-Facebook, Ex-Google Employee</small>
-               </blockquote>
-         	  </div>
-         	  </div>
-         	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/logo_imperial.jpg" />
-         	  </div>
-         	  </div>
-        </div>
         <div class="item container">
          	  <div class="row">
          	  <div class="span6">
@@ -127,11 +97,11 @@
          	  </div>
          	  </div>
          	  <div class="span6 featurette-image hidden-phone">
-	         	    <img src="img/logo_imperial.jpg"/>
+	         	    <img src="img/AKQA.jpg"/>
          	  </div>
          	  </div>
         </div>                
-        <div class="item container">
+        <div class="item active container">
          <div class="container">
          	  <div class="row">
          	  <div class="span6">
